# Pico

./: .gitignore  .slugignore  BYS_07282012_07262022.csv  Docker-Worker  Dockerfile  Procfile  README.md  docker-compose.yml  requirements.txt  tox.ini
backend/: README.md  asgi.py  celery.py  logger.py  pyproject.toml  requirements.txt  settings.py  urls.py  views.py
backend/apps/app/: admin.py  apps.py  authentications.py  forms.py  models.py  permissions.py  rate_limits.py  schema_generators.py  urls.py  views.py
backend/apps/app/fixtures/: access_app.json
backend/apps/app/migrations/: 0001_initial.py  0002_app_tools_alter_app_tier.py  0003_alter_app_tools.py  0004_app_schema_description_app_schema_name_and_more.py
backend/apps/auth/: admin.py  apps.py  auth_urls.py  models.py  serializers.py  urls.py  views.py
backend/apps/auth/fixtures/: users.json
backend/apps/auth/migrations/: 0001_initial.py
backend/apps/chat/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/chat/migrations/: 0001_initial.py
backend/apps/common/: encryption.py
backend/apps/tools/: __init__.py  admin.py  constants.py  functions.py  models.py  querysets.py  serializers.py  signals.py  urls.py  views.py
backend/apps/tools/apis/: __init__.py
backend/apps/tools/apis/gmaps/: api.py  enums.py  exceptions.py  serializers.py
backend/apps/tools/apis/lucky/: api.py
backend/apps/tools/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
backend/docker/: Dockerfile  docker_compose.yml  entrypoint.sh  example.env
(+929 files in other folders)
